--- a/workspace/templates/nav_workspace.html
+++ b/workspace/templates/nav_workspace.html
@@ -96,6 +96,7 @@
 				<li><a href="{% url 'admin_manager.edit_social' %}">{% trans 'APP-SOCIAL-TEXT' %}</a></li>
 				<li><a href="{% url 'admin_manager.edit_domain' %}">{% trans 'ACCOUNT-DOMAINSETTINGS-TAB' %}</a></li>
 				<li><a href="{% url 'admin_manager.index_categories' %}">{% trans 'ACCOUNT-CATEGORIES-TAB' %}</a></li>
+				<li><a href="{% url 'admin_manager.index_sources' %}">{% trans 'ACCOUNT-SOURCES-TAB' %}</a></li>
 				<li><a href="{% url 'admin_manager.load' %}">{% trans 'ACCOUNT-HOME-TAB' %}</a></li>
 			</ul>
 		</li>
