Bug #133188643: Mejorar CRON para datasets

--- a/workspace/templates/editDataset/webservice.html
+++ b/workspace/templates/editDataset/webservice.html
@@ -26,6 +26,7 @@
 <script src="{% static 'workspace/scripts/processManager/dataset/finishView.js' %}"></script>
 <script src="{% static 'workspace/scripts/processManager/processManagerModel.js' %}"></script>
 <script src="{% static 'workspace/scripts/processManager/processManagerView.js' %}"></script>
+<script src="{% static 'cron-parser/dist/cron-parser.min.js' %}"></script>
 
 <meta name="main-option" content="id_datasets_option"/>
 {% endblock %}
