Feature #133680321: El editor debe poder ingresar una referencia a la documentacion del dataset

--- a/workspace/templates/editDataset/file.html
+++ b/workspace/templates/editDataset/file.html
@@ -66,6 +66,7 @@ $(document).ready(function(){
 		// Initialize Model
 		file_data: '{{ dataset.filename }}',
 		mbox: '{{ dataset.mbox }}',
+        doc: '{{ dataset.doc }}',
 		spatial: '{{ dataset.spatial }}',
 		frequency: '{{ dataset.frequency }}',
 		license_url: '{{ dataset.license_url }}',
