--- a/workspace/templates/editDataset/url.html
+++ b/workspace/templates/editDataset/url.html
@@ -64,6 +64,7 @@ $(document).ready(function(){
 		// Initialize Model
 		end_point: '{% autoescape off %}{{ dataset.end_point }}{% endautoescape %}',
 		mbox: '{{ dataset.mbox }}',
+		doc: '{{ dataset.doc }}',
 		spatial: '{{ dataset.spatial }}',
 		frequency: '{{ dataset.frequency }}',
 		license_url: '{{ dataset.license_url }}'
