--- a/workspace/templates/editDataset/webservice.html
+++ b/workspace/templates/editDataset/webservice.html
@@ -84,6 +84,7 @@ $(document).ready(function(){
     use_cache: '{{ dataset.use_cache }}',
     att_headers: '{{ dataset.att_headers }}',
     mbox: '{{ dataset.mbox }}',
+    doc: '{{ dataset.doc }}',
     license_url: '{{ dataset.license_url }}',
     spatial: '{{ dataset.spatial }}',
     frequency: '{{ dataset.frequency }}',
