--- a/microsites/templates/loadHome/home_7.html
+++ b/microsites/templates/loadHome/home_7.html
@@ -434,7 +434,7 @@
 
     <!-- RESOURCES TABLE -->
     {% if config.resourcesTable %}
-    <div class="resourcesTable">
+    <div class="theTable">
         <div class="container">
             {% include "loadHome/resourcesTable.html" %}
         </div>
