--- a/microsites/media/microsites/styles/stickyFooter.css
+++ b/microsites/media/microsites/styles/stickyFooter.css
@@ -5,11 +5,7 @@ body > .layout{height:auto;min-height:100%;}
 .miniFooterJunar{position:relative;margin-top:-42px; /* negative value of footer height */} 
 
 /*MINI FOOTER BRANDING*/
-.miniFooterJunar{background:#a8a9aa;font-size:11px;color:#bebebd;height:42px;float:left;width:100%;overflow:hidden;text-shadow:0 1px 0 rgba(255,255,255,.4);min-width:998px;
-	-webkit-box-shadow:inset 0 2px 2px 0 #8b8c8d;
-	   -moz-box-shadow:inset 0 2px 2px 0 #8b8c8d;
-	        box-shadow:inset 0 2px 2px 0 #8b8c8d;
-}
+.miniFooterJunar{background:#a8a9aa;font-size:11px;color:#bebebd;height:42px;float:left;width:100%;overflow:hidden;min-width:998px;}
 .miniFooterJunar ul{float:left;display:block;}
 .miniFooterJunar ul li{float:left;line-height:42px;height:42px;}
 .miniFooterJunar ul li a{color:#3d3e3e;display:inline-block;}
