field de busqueda en ws

--- a/workspace/templates/manageDatasets/templates.html
+++ b/workspace/templates/manageDatasets/templates.html
@@ -28,6 +28,13 @@
    </div>
    <% }%>
 
+   <% if (search.length !== 0) {%>
+   <div class="filters">
+              <h3 class="">{% trans 'APP-SEARCH-TEXT' %}</h3>
+                        <input type="text" class='filter-add' name="filter_text" placeholder="{% trans 'APP-SEARCH-TEXT' %}..." data-cid="1"/>
+   </div>
+   <% }%>
+
    <% if (category.length !== 0) {%>
    <div class="filters">
       <h3 class="">{% trans 'APP-CATEGORY-TEXT' %}</h3>
