ajustes search filter en datasets. Refactor total_resources, habia un bug. Paso ManageCommon.scss de CSS a SASS

--- a/workspace/templates/manageDatasets/index.html
+++ b/workspace/templates/manageDatasets/index.html
@@ -40,7 +40,7 @@
 	<!-- Column Left -->
 	<div class="col-xs-7">    
 		
-		<h1>{% trans "APP-DATASETS-TEXT" %} <span class="total-resources"></span></h1>
+		<h1>{% trans "APP-DATASETS-TEXT" %} <span class="total-entries"></span></h1>
 
 	</div>
 
@@ -99,6 +99,7 @@
 
 	$(document).ready(function(){
 		var manageDatasetsModel =  new ManageDatasetsModel({
+			total_entries: {{ stats.account_total_datasets }},
 			total_resources: {{ stats.account_total_datasets }}
 		});
 		var manageDatasetsView =  new ManageDatasetsView({
