--- a/workspace/templates/manageDatasets/templates.html
+++ b/workspace/templates/manageDatasets/templates.html
@@ -1,8 +1,8 @@
 {% load i18n extra_tags core_components components %}
 
 {# Total Resources #}
-<script type="text/template" id="total-resources-template">
-<% if(total_resources > 0){ %>(<%= total_resources %>)<% } %>
+<script type="text/template" id="total-entries-template">
+<% if(total_entries > 0){ %>(<%= total_entries %>)<% } %>
 </script>
 
 {# Active Filter #}
@@ -16,7 +16,7 @@
 
    <% if (active.length !== 0) {%>
    <div class="activeFilters">
-      <h3 class="">{% trans 'APP-ACTIVEFILTERS-TEXT' %}</h3>
+      <h3>{% trans 'APP-ACTIVEFILTERS-TEXT' %}</h3>
       <ul id="active-filters-list">
        	<% _(active).each(function( item ){ %>
 				<li>
@@ -30,17 +30,17 @@
 
    <% _(search).each(function( item ){ %>
    <% if (!item.active) {%>
-   <div class="filters">
-        <h3 class="">{% trans 'APP-SEARCH-TEXT' %}</h3>
-            <input type="text" class='searchFilter' name="filter_text" placeholder="{% trans 'APP-SEARCH-TEXT' %}..." data-cid="<%= item.cid %>"/>
-            <div style='padding: 3px 0 0 6px;' ><span id='searchTip' style='color: transparent' class='date'>{% trans 'APP-SEARCH-TYPE-AND-PRESS-ENTER' %}</span></div>
+   <div class="filters search-filter">
+      <h3>{% trans 'APP-SEARCH-TEXT' %}</h3>
+      <input type="text" class='search-field' placeholder="{% trans 'APP-SEARCH-FILTER-TEXT' %}" data-cid="<%= item.cid %>"/>
+      <p id='id_searchTip' class='tip'>{% trans 'APP-SEARCH-TYPE-AND-PRESS-ENTER' %}</p>
    </div>
    <% }%>
    <% });%>
 
    <% if (category.length !== 0) {%>
    <div class="filters">
-      <h3 class="">{% trans 'APP-CATEGORY-TEXT' %}</h3>
+      <h3>{% trans 'APP-CATEGORY-TEXT' %}</h3>
       <ul>
        	<% _(category).each(function( item ){ %>
 				<li>
@@ -55,7 +55,7 @@
 
    <% if (status.length !== 0) {%>
    <div class="filters">
-      <h3 class="">{% trans 'APP-STATUS-TEXT' %}</h3>
+      <h3>{% trans 'APP-STATUS-TEXT' %}</h3>
       <ul>
        	<% _(status).each(function( item ){ %>
 				<li>
@@ -70,7 +70,7 @@
 
    <% if (author.length !== 0) {%>
    <div class="filters">
-      <h3 class="">{% trans 'APP-AUTHOR-TEXT' %}</h3>
+      <h3>{% trans 'APP-AUTHOR-TEXT' %}</h3>
       <ul>
        	<% _(author).each(function( item ){ %>
 				<li>
