search a vistas. refactor total resources en vistas.

--- a/workspace/templates/manageDatasets/templates.html
+++ b/workspace/templates/manageDatasets/templates.html
@@ -1,6 +1,6 @@
 {% load i18n extra_tags core_components components %}
 
-{# Total Resources #}
+{# Total entries #}
 <script type="text/template" id="total-entries-template">
 <% if(total_entries > 0){ %>(<%= total_entries %>)<% } %>
 </script>
