nuevo file manageResourcesView que centraliza la vista principal de los listados.

--- a/workspace/templates/manageDatasets/index.html
+++ b/workspace/templates/manageDatasets/index.html
@@ -26,6 +26,7 @@
 <script src="{% static 'workspace/scripts/manageDatasets/affectedResourcesCollectionView.js' %}"></script>
 <script src="{% static 'workspace/scripts/manageDatasets/filtersView.js' %}"></script>
 <script src="{% static 'workspace/scripts/manageDatasets/manageDatasetsModel.js' %}"></script>
+<script src="{% static 'workspace/scripts/manageResources/manageResourcesView.js' %}"></script>
 <script src="{% static 'workspace/scripts/manageDatasets/manageDatasetsView.js' %}"></script>
 
 {# Left Navigation Selected Option #}
@@ -102,7 +103,7 @@
 			total_entries: {{ stats.account_total_datasets }},
 			total_resources: {{ stats.account_total_datasets }}
 		});
-		var manageDatasetsView =  new ManageDatasetsView({
+		var manageDatasetsView =  new ManageResourcesView({
 			model: manageDatasetsModel,
 			datastreamImplValidChoices: {% if datastream_impl_valid_choices %}{{ datastream_impl_valid_choices }}{% else %}[]{% endif %},
 			filters: {{filters|jsonify}}
