--- a/workspace/templates/manageDatasets/overlays.html
+++ b/workspace/templates/manageDatasets/overlays.html
@@ -5,7 +5,7 @@
 <div class="In clearfix">
    <h4>{% trans 'APP-OVERLAY-DELETE-DATASET-TITLE' %}</h4>
    <div class="ov-content">
-      <p class="text more-padding">{% trans 'APP-OVERLAY-DELETE-DATASET-TEXT' %}</p>
+      <p class="text center more-padding">{% trans 'APP-OVERLAY-DELETE-DATASET-TEXT' %}</p>
    </div>
    <div class="ov-bottom">
       <div class="ov-buttons">
@@ -21,7 +21,7 @@
 <div class="In clearfix">
    <h4>{% trans 'APP-OVERLAY-DELETE-DATASET-CONFIRM-TITLE' %}</h4>
    <div class="ov-content">
-      <p class="text">{% trans 'APP-OVERLAY-DELETE-DATASET-CONFIRM-TEXT' %}</p>
+      <p class="text center">{% trans 'APP-OVERLAY-DELETE-DATASET-CONFIRM-TEXT' %}</p>
       <ul class="ul-overlay" id="id_affectedResourcesList"></ul>
    </div>
    <div class="ov-bottom">
