--- a/api/templates/tableau.html
+++ b/api/templates/tableau.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
     <script src="https://connectors.tableau.com/libs/tableauwdc-2.1.latest.js" type="text/javascript"></script>
-    <script src="http://api.dev:8080/api/v2/datastreams/{{obj.guid}}/tableau.js/?auth_key={{obj.auth_key}}" type="text/javascript"></script>
+    <script src="{{obj.protocol}}://{{obj.domain}}/api/v2/datastreams/{{obj.guid}}/tableau.js/?auth_key={{obj.auth_key}}" type="text/javascript"></script>
 </head>
 
 <body>
